[gd_scene load_steps=6 format=3 uid="uid://wgin2lvujhih"]

[ext_resource type="Script" path="res://scenes/Inventory/scripts/Inventory.gd" id="1_8jcip"]
[ext_resource type="Texture2D" uid="uid://cy2h8dlso2coh" path="res://tilemap/inventory/Inventory_background.png" id="2_5h4bs"]
[ext_resource type="Script" path="res://scripts/GridContainer.gd" id="3_kkf5f"]
[ext_resource type="PackedScene" uid="uid://dsh0qouwc7t0l" path="res://scenes/slot.tscn" id="4_5owla"]
[ext_resource type="Texture2D" uid="uid://dfynx7dg6tad" path="res://icon.svg" id="5_ey06v"]

[node name="Inventory" type="Node2D"]
script = ExtResource("1_8jcip")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_right = 131.0
offset_bottom = 81.0
texture = ExtResource("2_5h4bs")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 7.5
offset_top = 6.5
offset_right = 123.5
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2
columns = 5
script = ExtResource("3_kkf5f")

[node name="slot1" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="slot2" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="slot3" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="slot4" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="slot5" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="slot6" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="slot7" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="slot8" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="slot9" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="slot10" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="slot11" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="slot12" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="slot13" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="slot14" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="slot15" parent="GridContainer" instance=ExtResource("4_5owla")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-120, 80)
scale = Vector2(0.539063, 0.492188)
texture = ExtResource("5_ey06v")

[connection signal="gui_input" from="GridContainer/slot1" to="." method="_on_slot_gui_input" binds= [0]]
[connection signal="gui_input" from="GridContainer/slot2" to="." method="_on_slot_gui_input" binds= [1]]
[connection signal="gui_input" from="GridContainer/slot3" to="." method="_on_slot_gui_input" binds= [2]]
[connection signal="gui_input" from="GridContainer/slot4" to="." method="_on_slot_gui_input" binds= [3]]
[connection signal="gui_input" from="GridContainer/slot5" to="." method="_on_slot_gui_input" binds= [4]]
[connection signal="gui_input" from="GridContainer/slot6" to="." method="_on_slot_gui_input" binds= [5]]
[connection signal="gui_input" from="GridContainer/slot7" to="." method="_on_slot_gui_input" binds= [6]]
[connection signal="gui_input" from="GridContainer/slot8" to="." method="_on_slot_gui_input" binds= [7]]
[connection signal="gui_input" from="GridContainer/slot9" to="." method="_on_slot_gui_input" binds= [8]]
[connection signal="gui_input" from="GridContainer/slot10" to="." method="_on_slot_gui_input" binds= [9]]
[connection signal="gui_input" from="GridContainer/slot11" to="." method="_on_slot_gui_input" binds= [10]]
[connection signal="gui_input" from="GridContainer/slot12" to="." method="_on_slot_gui_input" binds= [11]]
[connection signal="gui_input" from="GridContainer/slot13" to="." method="_on_slot_gui_input" binds= [12]]
[connection signal="gui_input" from="GridContainer/slot14" to="." method="_on_slot_gui_input" binds= [13]]
[connection signal="gui_input" from="GridContainer/slot15" to="." method="_on_slot_gui_input" binds= [14]]
